syntax = "proto3";
package conf.v1;

import "google/protobuf/duration.proto";

option go_package = "github.com/horonlee/krathub/api/gen/go/conf/v1;conf";

// =============================================================================
// Bootstrap 配置
// =============================================================================

// Bootstrap 配置
message Bootstrap {
  App app = 1; // 应用基础配置
  Server server = 2; // 服务端配置
  Client client = 3; // 客户端配置
  Data data = 4; // 数据源配置
  Registry registry = 5; // 注册中心配置
  Discovery discovery = 6; // 服务发现配置
  Config config = 7; // 配置中心配置
  Trace trace = 8; // 链路追踪配置
  Metrics metrics = 9; // 指标配置
}

// =============================================================================
// 通用配置
// =============================================================================

// 可复用的 TLS 配置
message TLSConfig {
  bool enable = 1; // 开关
  string cert_path = 2; // 证书路径
  string key_path = 3; // 私钥路径
  string ca_path = 4; // CA 证书路径
}

// CORS 配置
message CORS {
  bool enable = 1; // 是否启用 CORS
  repeated string allowed_origins = 2; // 允许的源
  repeated string allowed_methods = 3; // 允许的方法
  repeated string allowed_headers = 4; // 允许的头部
  repeated string exposed_headers = 5; // 暴露的头部
  bool allow_credentials = 6; // 是否允许凭证
  google.protobuf.Duration max_age = 7; // 预检请求缓存时间
}

// =============================================================================
// 服务发现与注册中心通用配置
// =============================================================================

// Consul 配置
message ConsulConfig {
  string addr = 1; // Consul 地址
  string scheme = 2; // 协议
  string token = 3; // 访问令牌
  string datacenter = 4; // 数据中心
  google.protobuf.Duration timeout = 5; // 超时时间
  repeated string tags = 6; // 服务标签
  string key = 7; // 配置键名 (仅 Config 使用)
}

// Etcd 配置
message EtcdConfig {
  repeated string endpoints = 1; // Etcd 端点列表
  string username = 2; // 用户名
  string password = 3; // 密码
  google.protobuf.Duration timeout = 4; // 超时时间
  string key = 5; // 配置键名 (仅 Config 使用)
  string namespace = 6; // 命名空间 (仅 Registry 和 Discovery 使用)
}

// Nacos 配置
message NacosConfig {
  string addr = 1; // Nacos 地址
  uint64 port = 2; // Nacos 端口
  string namespace = 3; // 命名空间
  string group = 4; // 分组
  string username = 5; // 用户名
  string password = 6; // 密码
  google.protobuf.Duration timeout = 7; // 超时时间
  string data_id = 8; // 数据ID (仅 Config 使用)
}

// Kubernetes 配置
message KubernetesConfig {
  bool enable = 1; // 是否启用 K8s 服务发现/注册（在 Pod 中运行时设为 true）
}

// =============================================================================
// 网络通信配置
// =============================================================================

// 通信服务端配置
message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
    TLSConfig tls = 4; // 为 HTTP 添加 TLS 配置
    CORS cors = 5; // CORS 配置
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
    TLSConfig tls = 4; // 为 gRPC 添加 TLS 配置
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

// 客户端配置
message Client {
  message GRPC {
    string endpoint = 1;
    TLSConfig tls = 2;
  }
  // 使用 map 来管理所有下游 gRPC 服务的客户端配置
  map<string, GRPC> grpc = 1;
}

// =============================================================================
// 数据存储配置
// =============================================================================

// 数据源配置
message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string user_name = 3; // Redis用户名
    string password = 4; // Redis密码
    int32 db = 5; // Redis数据库编号
    google.protobuf.Duration dial_timeout = 6;
    google.protobuf.Duration read_timeout = 7;
    google.protobuf.Duration write_timeout = 8;
  }
  message Client {
    message HTTP {
      string service_name = 1;
      string endpoint = 2;
      google.protobuf.Duration timeout = 3;
    }
    message GRPC {
      string service_name = 1;
      string endpoint = 2;
      google.protobuf.Duration timeout = 3;
    }
    repeated GRPC grpc = 1;
    repeated HTTP http = 2;
  }
  Database database = 1;
  Redis redis = 2;
  Client client = 3;
}

// =============================================================================
// 应用基础配置
// =============================================================================

// 应用配置
message App {
  message Jwt {
    string access_secret = 1; // Access Token密钥
    string refresh_secret = 2; // Refresh Token密钥
    int32 access_expire = 3; // Access Token过期时间，单位秒
    int32 refresh_expire = 4; // Refresh Token过期时间，单位秒
    string issuer = 5; // JWT签发者
    string audience = 6; // JWT受众
  }
  message Log {
    int32 level = 1; // 0:debug, 1:info, 2:warn, 3:error, 4:fatal
    string filename = 2; // 日志文件名
    int32 max_size = 3; // 日志文件最大大小
    int32 max_backups = 4; // 日志文件最大备份数
    int32 max_age = 5; // 日志文件最大保留天数
    bool compress = 6; // 是否压缩日志文件
  }
  string env = 1; // dev test prod
  string name = 2;
  string version = 3;
  Jwt jwt = 4; // JWT配置
  Log log = 5; // 日志配置
  map<string, string> metadata = 6; // 元数据
}

// =============================================================================
// 服务治理配置
// =============================================================================

// 注册中心配置
message Registry {
  oneof registry {
    ConsulConfig consul = 1; // Consul 配置
    EtcdConfig etcd = 2; // Etcd 配置
    NacosConfig nacos = 3; // Nacos 配置
    KubernetesConfig kubernetes = 4; // Kubernetes 配置
  }
}

// 服务发现配置
message Discovery {
  oneof discovery {
    ConsulConfig consul = 1; // Consul 配置
    EtcdConfig etcd = 2; // Etcd 配置
    NacosConfig nacos = 3; // Nacos 配置
    KubernetesConfig kubernetes = 4; // Kubernetes 配置
  }
}

// 配置中心配置
message Config {
  oneof config {
    ConsulConfig consul = 1; // Consul 配置
    EtcdConfig etcd = 2; // Etcd 配置
    NacosConfig nacos = 3; // Nacos 配置
  }
}

// =============================================================================
// 监控配置
// =============================================================================

// 链路追踪配置
message Trace {
  string endpoint = 1;
}

// Metrics 配置
message Metrics {
  bool enable = 1; // 是否开启
  string meter_name = 2; // Meter 名称
}
